Fix bug where changing date after predictions would break the app

--- a/app/assets/index.css
+++ b/app/assets/index.css
@@ -161,7 +161,7 @@
 }
 
 .info-hover-text {
-  font-size: 19px;
+  font-size: 17px;
 }
 
 .hover-container {
